--- a/index.html
+++ b/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>JENNY PRACTICAL FLEXBOX</h1>
-</body>
-</html>
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>BEBANCO_PRACTICAL_FLEXBOX_BSIT1B</title>
+  
+  </head>
+  <body>
+    <ul>
+      <li>
+        <a href="BebancoFlexbox1.html">FLEXBOX #1</a>
+      </li>
+    </ul>
+     <ul>
+       <li>
+         <a href="BebancoFlexbox2.html">FLEXBOX #2</a>
+       </li>
+     </ul>
+      <ul>
+        <li>
+          <a href="BebancoFlexbox3.html">FLEXBOX #3</a>
+        </li>
+      </ul>
+       <ul>
+         <li>
+           <a href="BebancoFlexbox4.html">FLEXBOX #4</a>
+         </li>
+       </ul>
+        <ul>
+          <li>
+            <a href="BebancoFlexbox5.html">FLEXBOX #5</a>
+          </li>
+        </ul>
+         <ul>
+           <li>
+             <a href="BebancoFlexbox6.html">FLEXBOX #6</a>
+           </li>
+         </ul>
+          <ul>
+            <li>
+              <a href="BebancoFlexbox7.html">FLEXBOX #7</a>
+            </li>
+          </ul>
+           <ul>
+             <li>
+               <a href="BebancoFlexbox8.html">FLEXBOX #8</a>
+             </li>
+           </ul>
+            <ul>
+              <li>
+                <a href="BebancoFlexbox9.html">FLEXBOX #9</a>
+              </li>
+            </ul>
+  
+</body></html>
