--- a/BebancoFlexbox8.html
+++ b/BebancoFlexbox8.html
@@ -2,222 +2,223 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BebancoFlexbox8</title>
-    <link rel="stylesheet" href="style3.css">
+
+    <style>
+
+        * {
+            padding: 0px;
+            margin: 0px;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+            height: calc(100vh - 8px);
+            padding: 4px;
+            gap: 4px;
+        }
+
+        nav{
+            border: 1px solid black;
+            display: flex;
+            justify-content: space-between;
+        }
+    
+        .navbox {
+            display: flex;
+            padding: 4px;
+            gap: 4px;
+            align-items: center;
+        }
+        .redbox {
+            background-color: red;
+            height: 40px;
+            width: 40px;
+        }
+
+        .navredbox {
+            background-color: red;
+            height: 30px;
+            width: 60px;
+        }
+
+        .container {
+            display: flex;
+            flex-direction: row;
+            gap: 4px;
+            flex-grow: 1;
+        }
+
+        main {
+            display: flex;
+            flex-direction: row;
+            flex-grow: 1;
+            gap: 10px;
+            padding: 4px;
+            border: 1px solid black;
+        }
+
+        .mainb {
+            border: 1px solid black;
+            display: flex;
+            gap: 4px;
+            flex-wrap: wrap;
+            width: 50%;
+            align-content: flex-start;
+            padding: 8px;
+        }
+
+        .mainbox {
+            border: 1px solid black;
+            height: 90px;
+            width: 90px;
+        }
+
+        .box2 {
+            border: 1px solid black;
+            display: flex;
+            gap: 4px;
+            flex-wrap: wrap;
+            width: 50%;
+            padding: 10px;
+            justify-content: center;
+            align-content: flex-start;
+            column-gap: 50px;
+        }
+
+        .mainboxes {
+            border: 1px solid black;
+            height: 160px;
+            width: 230px;
+        }
+
+        aside {
+            display: flex;
+            flex-direction: column;
+            padding: 4px;
+            gap: 4px;
+            border: 1px solid black;
+        }
+
+        .asideboxes {
+            border: 1px solid black;
+            height: 30px;
+            width: 15vw;
+        }
+
+        footer {
+            border: 1px solid black;
+        }
+
+        .footerbox {
+            display: flex;
+            align-items: center;
+            gap: 4px;
+            padding: 4px;
+        }
+
+        .footerredbox {
+            background-color: red;
+            height: 40px;
+            width: 40px;
+        }
+
+        .footerbottom {
+            justify-items: center;
+            padding: 4px;
+        }
+
+        .footerl {
+            display: flex;
+            gap: 4px;
+        }
+
+        .footertini {
+            background-color: red;
+            height: 20px;
+            width: 20px;
+        }
+
+    </style>
 </head>
-<style>
-
-* {
-    padding: 0;
-    margin: 0;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    padding: 4px;
-    height: calc(100vh - 8px);
-    gap: 4px;
-}
-
-nav, main, aside, footer {
-    border: 1px solid black;
-}
-
-nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 4px;
-}
-
-.navleft {
-    display: flex;
-    gap: 4px;
-    align-items: center;
-}
-
-.navright {
-    display: flex;
-    gap: 4px;
-    align-items: center;
-}
-
-.redbox {
-    background: red;
-    height: 30px;
-    width: 30px;
-}
-
-.redrectangle {
-    background: red;
-    height: 20px;
-    width: 35px;
-}
-
-.content {
-    display: flex;
-    flex-direction: row;
-    flex-grow: 1;
-    gap: 4px;
-}
-
-main {
-    display: flex;
-    flex-grow: 1;
-    padding: 4px;
-    gap: 4px;
-}
-
-.mainbox {
-    display: flex;
-    padding: 4px;
-    border: 1px solid black;
-    flex-wrap: wrap;
-    gap: 4px;
-    width: 50%;
-    align-content: flex-start;
-}
-
-.mainbox1 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    column-gap: 20px;
-    justify-content: space-evenly;
-}
-
-
-aside {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-    padding: 4px;
-}
-
-.asidebox {
-    display: flex;
-    border: 1px solid black;
-    width: 15vw;
-    height: 30px;
-}
-
-.smallboxes {
-    border: 1px solid black;
-    height: 80px;
-    width: 80px;
-}
-
-.bigbox {
-    border: 1px solid black;
-    height: 150px;
-    width: 190px;
-}
-
-footer {
-    gap: 4px;
-}
-
-.footertop{
-    align-items: center;
-    display: flex;
-    gap: 4px;
-    padding: 4px;
-}
-
-.footerbot {
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    padding: 4px;
-}
-
-.redboxes {
-    display: flex;
-    gap: 4px;
-    flex-direction: row;
-}
-.smallbox {
-    background: red;
-    height: 10px;
-    width: 10px;
-}
-
-</style>
-
 <body>
     <nav>
-        <div class="navleft">
+        <div class="navbox">
             <div class="redbox"></div>
-            <div>
-                <p>FLEXBOX</p>
-            </div>
+            <div class="text1">FLEXBOX</div>
         </div>
-        <div class="navright">
-            <div class="redrectangle"></div>
-            <div class="redrectangle"></div>
+
+        <div class="navbox">
+            <div class="navredbox"></div>
+            <div class="navredbox"></div>
         </div>
     </nav>
-    <div class="content">
+
+    <div class="container">
         <main>
-            <div class="mainbox">
-                <div class="smallboxes"></div>
-                <div class="smallboxes"></div>
-                <div class="smallboxes"></div>
-                <div class="smallboxes"></div>
-                <div class="smallboxes"></div>
-                <div class="smallboxes"></div>
-                <div class="smallboxes"></div>
-                <div class="smallboxes"></div>
-                <div class="smallboxes"></div>
-                <div class="smallboxes"></div>
-                <div class="smallboxes"></div>
-                <div class="smallboxes"></div>
-                <div class="smallboxes"></div>
-                <div class="smallboxes"></div>
-                <div class="smallboxes"></div>
+            <div class="mainb">
+                <div class="mainbox"></div>
+                <div class="mainbox"></div>
+                <div class="mainbox"></div>
+                <div class="mainbox"></div>
+                <div class="mainbox"></div>
+                <div class="mainbox"></div>
+                <div class="mainbox"></div>
+                <div class="mainbox"></div>
+                <div class="mainbox"></div>
+                <div class="mainbox"></div>
+                <div class="mainbox"></div>
+                <div class="mainbox"></div>
+                <div class="mainbox"></div>
+                <div class="mainbox"></div>
+                <div class="mainbox"></div>
             </div>
-            <div class="mainbox mainbox1">
-                <div class="bigbox"></div>
-                <div class="bigbox"></div>
-                <div class="bigbox"></div>
-                <div class="bigbox"></div>
+
+            <div class="box2">
+                <div class="mainboxes"></div>
+                <div class="mainboxes"></div>
+                <div class="mainboxes"></div>
+                <div class="mainboxes"></div>
             </div>
         </main>
+
         <aside>
-            <div class="asidebox"></div>
-            <div class="asidebox"></div>
-            <div class="asidebox"></div>
-            <div class="asidebox"></div>
-            <div class="asidebox"></div>
-            <div class="asidebox"></div>
-            <div class="asidebox"></div>
-            <div class="asidebox"></div>
-            <div class="asidebox"></div>
-            <div class="asidebox"></div>
+            <div class="asideboxes"></div>
+            <div class="asideboxes"></div>
+            <div class="asideboxes"></div>
+            <div class="asideboxes"></div>
+            <div class="asideboxes"></div>
+            <div class="asideboxes"></div>
+            <div class="asideboxes"></div>
+            <div class="asideboxes"></div>
+            <div class="asideboxes"></div>
+            <div class="asideboxes"></div>
         </aside>
     </div>
+
     <footer>
-        <div class="footertop">
-            <div class="redbox"></div>
-            <div>
-                <p>FLEXBOX</p>
-            </div>
+        <div class="footerbox">
+            <div class="footerredbox"></div>
+            <div class="h1">FLEXBOX</div>
         </div>
+
         <div>
             <hr>
         </div>
-        <div class="footerbot">
-            <div class="redboxes">
-                <div class="smallbox"></div>
-                <div class="smallbox"></div>
-                <div class="smallbox"></div>
-                <div class="smallbox"></div>
-                <div class="smallbox"></div>
+
+        <div class="footerbottom">
+            <div class="footerl">
+                <div class="footertini"></div>
+                <div class="footertini"></div>
+                <div class="footertini"></div>
+                <div class="footertini"></div>
+                <div class="footertini"></div>
             </div>
-            <div class="text">
-                <p>@Copyright All rights reserved</p>
+
+            <div class="footertext">
+                <p>&copy;Copyright All rights reserved</p>
             </div>
         </div>
     </footer>
